# ASP.NET-HV-Travel

./: .gitignore  DATA_MAPPING_WALKTHROUGH.md  Directory.Build.props  Dockerfile  HV-Travel.slnx  README.md  VietVoyage.slnx  build_errors.txt  build_log.txt  build_log_2.txt  build_output.txt  docker-commands.md  docker-compose.dev.yml  docker-compose.yml  infra_errors.txt  infra_errors_2.txt  seed_error_log.txt
HV-Travel.Application/: Class1.cs  DependencyInjection.cs  HV-Travel.Application.csproj
HV-Travel.Domain/: Class1.cs
HV-Travel.Infrastructure/: Class1.cs  DependencyInjection.cs  HV-Travel.Infrastructure.csproj
HV-Travel.Web.Tests/: AdminCloudinaryAssetBrowserMarkupTests.cs  AdminDashboardRevenueMarkupTests.cs  AdminEditRichTextCoverageTests.cs  AdminNotificationDropdownServiceTests.cs  AdminOverlayAssetsTests.cs  AdminRichTextSelfHostTests.cs  AdminSharedInputMarkupTests.cs  AdminToursControllerRichTextNormalizationTests.cs  AdminToursParityTests.cs  AdminToursSchemaSafetyTests.cs  BookingDisplayTextHelperTests.cs  BookingJourneyPresenterTests.cs  BookingLookupFlowTests.cs  (+45 more)
tools/mockdata_generator/: README.md  images by locations.md  import-medium.ps1  patch_tour_images.py  pyproject.toml  run_generator.bat
tools/mockdata_generator/mockdata_generator/: __main__.py  catalog.py  cli.py  importer.py  profiles.py  randoms.py  sample_contract.py  ui.py  world.py  writer.py
tools/mockdata_generator/mockdata_generator/builders/: __init__.py  core.py  engagement.py  loyalty.py  marketing.py
tools/mockdata_generator/tests/: test_generator.py
(+389 files in other folders)
